Fixed Copyright Footer and attempted to align top header

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -17,6 +17,7 @@ body{
     height:105px;
     border-bottom:2px #666666 solid;
     margin:0px;
+    z-index: 1;
 }
 
 a {
@@ -31,11 +32,13 @@ a {
     color:#ffffff;
     float:left;
     font-size:24px;
-    margin-left:140px;
-    margin-right:40%;
+    margin-left:20%;
+    margin-right:30%;
     padding:20px;
     position: relative;
     top:40px;
+    width: 200px;
+    z-index: 3;
 }
 
 .LeftWord {
@@ -89,6 +92,7 @@ a {
     position:absolute;
     bottom:0px;
     text-align:center;
+    vertical-align: bottom;
 }
 
 .CenterWord{
@@ -112,6 +116,7 @@ a {
 
 #ReverseTeal{
     margin-left:120px;
+    margin-right:40%;
     background:#ffffff;
     color:#4aaaa5;
     width:80%;
@@ -133,6 +138,7 @@ p{
     top:60px;
     margin:10px;
     z-index:2;
+    text-align:justify;
 }
 
 .WhiteBox2{
@@ -159,48 +165,34 @@ p{
     margin:10px;
 }
 
+.imgCard {
+    background: black;
+    width: 300px;
+    height: 200px;
+    position: absolute;
+}
 
 #Img1{
-    background:black;
-    width: 300px;
-    height:200px;
-    position:absolute;
     top:100px;
     left:20px;
 }
 
 #Img2{
-    background:black;
-    width: 300px;
-    height:200px;
-    position:absolute;
     top:100px;
     left:360px;
 }
 
 #Img3{
-    background:black;
-    width: 300px;
-    height:200px;
-    position:absolute;
     top:340px;
     left:20px;
 }
 
 #Img4{
-    background:black;
-    width: 300px;
-    height:200px;
-    position:absolute;
     top:340px;
     left:360px;
 }
 
 #Img5{
-    background:black;
-    width: 300px;
-    height:200px;
-    position:absolute;
     top:580px;
     left:20px;
 }
@@ -239,4 +231,9 @@ p{
 #Banner5{
     top:700px;
     left:20px;
+}
+
+.Footer p {
+    color:black;
+    margin-top:35px;
 }
